--- a/index.html
+++ b/index.html
@@ -4,5 +4,11 @@
 <body>
 <h1>Hello World!</h1>
 <p>I'm hosted with GitHub Pages.</p>
+
+
+<!-- UY BEGIN -->
+<div id="uyan_frame"></div>
+<script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js?uid=2127432"></script>
+<!-- UY END -->
 </body>
 </html>
